# weaver-code

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
docs/: CONVEYANCE_MODEL_LOADER_INTEGRATION.md
go-port/: CLAUDE.md  JUNIOR.md  Makefile  README.md  go.mod  go.sum
go-port/cmd/weaver/: main.go
go-port/docs/: junior-assessment-build-doc.md  model-loader-build-doc.md
go-port/internal/assessment/: assessment.go  assessment_test.go  challenges.go  extended.go  generator.go  report.go  report_test.go  training_export.go
go-port/internal/context/: manager.go  manager_test.go
go-port/internal/junior/: mistral.go  mistral_test.go  model.go  model_test.go
go-port/internal/loader/: lmstudio.go  loader.go  loader_test.go  ollama.go  services.go
go-port/internal/memory/: shared.go  shared_test.go
go-port/internal/orchestrator/: prompts.go  weaver.go  weaver_test.go
go-port/internal/senior/: adapter.go  adapter_test.go  claude.go  claude_test.go
go-port/internal/telemetry/: telemetry.go
go-port/internal/tools/: tools.go
go-port/modelfiles/: gpt-oss-weaver.modelfile  ministral-3-14b-fp16-weaver.modelfile  qwen3-coder-30b-fp16-weaver.modelfile  qwen3-coder-weaver.modelfile
src/weaver/: __init__.py  agents.py  cli.py  conversation.py  mcp_memory.py  memory.py  orchestrator.py  prompts.py  router.py
