[tool.poetry]
name = "weaver-code"
version = "0.1.0"
description = "Claude Code with a Junior Engineer - delegate tasks to local models"
authors = ["Todd <todd@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "weaver", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
httpx = {extras = ["http2"], version = "^0.27"}
pydantic = "^2.0"
rich = "^13.0"

# OpenTelemetry for Arize Phoenix tracing
opentelemetry-api = "^1.20"
opentelemetry-sdk = "^1.20"
opentelemetry-exporter-otlp = "^1.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
mypy = "^1.8"
ruff = "^0.3"

[tool.poetry.scripts]
weaver = "weaver.cli:main"
weaver-memory = "weaver.mcp_memory:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
# Ignore line-too-long in prompts.py (multi-line strings)
per-file-ignores = { "src/weaver/prompts.py" = ["E501"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
